--- a/views/Home/index.ejs
+++ b/views/Home/index.ejs
@@ -4,6 +4,7 @@
         <option value="en">English</option>
         <option value="hi">हिन्दी</option>
     </select>
+    <a  style="text-align:end;background-color: white;" class="feedback" href="/feedbacks">Feedbacks</a>
     <input type="text" id="search" placeholder="Search by name..." />
 </header>
 
