--- a/views/Home/feedback.ejs
+++ b/views/Home/feedback.ejs
@@ -1,5 +1,10 @@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+
 <div class="container mt-5">
-  <h2 class="mb-4 text-center">User Feedback</h2>
+  <a href="/" class="h6">Home</a>
+  <h2 class="mb-4 text-center text-info h1 bg-dark py-2 rounded">User Feedback</h2>
 
   <% if (feedbacks.length === 0 || feedbacks===undefined) { %>
     <p class="text-center text-muted">No feedback submitted yet.</p>
