--- a/views/Home/index.ejs
+++ b/views/Home/index.ejs
@@ -13,9 +13,9 @@
 <div class="feedback-section" style="margin-bottom: 100px;">
     <h2>Feedback</h2>
     <form id="feedback-form" action="/" method="post">
-        <input type="text" id="name" placeholder="Your Name" required>
-        <input type="email" id="email" placeholder="Your Email" required>
-        <textarea id="message" rows="5" cols="4" style="resize: none;"
+        <input type="text" name="name" id="name" placeholder="Your Name" required>
+        <input type="email" name="email" id="email" placeholder="Your Email" required>
+        <textarea id="message" name="message" rows="5" cols="4" style="resize: none;"
             placeholder="Your Message" required></textarea>
         <button type="submit" >Send Feedback</button>
     </form>
