--- a/views/Home/feedback.ejs
+++ b/views/Home/feedback.ejs
@@ -16,7 +16,7 @@
         </div>
         <div class="card-body">
           <p><strong>Email:</strong> <%= feedback.Email %></p>
-          <p><strong>Message:</strong> <%= feedback.Message %></p>
+          <p><strong>Message:</strong> <%= feedback.Feedback %></p>
           <p class="text-muted"><small>Submitted on <%= feedback.Feedback_DT %></small></p>
         </div>
       </div>
