--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(https://tripxl.com/blog/wp-content/uploads/2024/09/Ram-Ghat-1.jpg);
+  /* background-image: url(https://tripxl.com/blog/wp-content/uploads/2024/09/Ram-Ghat-1.jpg); */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -26,6 +26,7 @@ body::before {
 .title {
   background-color: #00c1aa;
   margin: 30px auto;
+  margin-top: 0;
   border-radius: 20px;
   width: fit-content;
   padding: 10px 20px;
@@ -37,28 +38,11 @@ header {
   padding: 1rem;
 }
 
-input[type="text"],
-#language-toggle {
-  margin-top: 10px;
-  padding: 10px;
-  width: 80%;
-  max-width: 400px;
-  border: none;
-  border-radius: 5px;
-  margin-bottom: 10px;
-}
-
-#language-toggle {
-  max-width: 150px;
-  font-size: 16px;
-}
-
 main {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
-  padding: 20px;
 }
 
 .place {
@@ -90,7 +74,7 @@ main {
   margin: 0;
 }
 
-footer {
+/* footer {
   background: #00796b;
   font-size: 15px;
   color: white;
@@ -101,7 +85,7 @@ footer {
   border-radius: 20px;
   position: sticky;
   bottom: 0px;
-}
+} */
 
 #modal {
   display: none;
@@ -241,45 +225,6 @@ mark {
   right: 10px;
 }
 
-.feedback-section {
-  background: #ffffff;
-  max-width: 500px;
-  margin: 40px auto;
-  padding: 30px;
-  border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-}
-
-.feedback-section h2 {
-  text-align: center;
-}
-#feedback-form{
-  width: 100%;
-}
-#feedback-form input,
-#feedback-form textarea {
-  width: 80%;
-  padding: 12px;
-  margin-bottom: 15px;
-  border: 1px solid #ccc;
-  border-radius: 6px;
-  font-size: 16px;
-}
-
-#feedback-form button {
-  padding: 12px;
-  background: #007BFF;
-  color: #fff;
-  border: none;
-  border-radius: 6px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-#feedback-form button:hover {
-  background: #0056b3;
-}
-
 #feedback-status {
   margin-top: 10px;
   text-align: center;
@@ -293,15 +238,12 @@ mark {
       padding: 30px 40px;
       text-align: center;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-      width: 100%;
-      margin-bottom: 120px;
       background-color: #ccc;
     }
 
     .weather-container h2 {
       font-size: 24px;
       color: #333;
-      margin-bottom: 20px;
     }
 
     .weather-btn {
@@ -331,15 +273,6 @@ mark {
     .weather-info p {
       margin: 6px 0;
       font-size: 16px;
-    }
-    .feedback{
-      margin-top: 10px;
-      padding: 10px;
-      width: 80%;
-      max-width: 400px;
-      border: none;
-      border-radius: 5px;
-      margin-bottom: 10px;
     }
     .error {
       color: #d8000c;
