--- a/views/Layout/General.ejs
+++ b/views/Layout/General.ejs
@@ -32,7 +32,9 @@
             aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">Chitrakoot-Tour</a>
+        <a class="navbar-brand" href="/">
+            <img src="/imageg/logo.png" width="85px;"/>
+        </a>
 
         <div class="collapse navbar-collapse text-right " id="navbarTogglerDemo03">
             <ul class="navbar-nav ml-auto mr-4 mt-2 mt-lg-0">
@@ -75,7 +77,15 @@
 </body>
 <!--Footer Added-->
 <footer class="footer shadow border pt-2">
-    <p class="text-center">&copy; 2025 Chitrakoot Tourism</p>
+    <div class="row">
+        <div class="col-sm-6 text-center">
+&copy; 2025 Chitrakoot Tourism
+        </div>
+         <div class="col-sm-6 text-center">
+            By Prashant & Saurabh, Student of MGCGV
+        </div>
+    </div>
+    <p class="text-center"></p>
 </footer>
 
 </html>
