--- a/views/Home/index.ejs
+++ b/views/Home/index.ejs
@@ -2,10 +2,10 @@
     <h1 class="title">Tourist Places in Chitrakoot</h1>
 </header>
 
-<main class="mx-lg-5 px-lg-5">
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4" id="Chitrakoot-places-list">
+<main class="mx-lg-5 px-lg-5" id="places-list" style="display: flex; flex-wrap: wrap;">
+    <!-- <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4" >
 
-    </div>
+    </div> -->
 </main>
 <div class="row mr-0 justify-content-center py-5 bg-light rounded shadow">
     <div class="col-lg-5 mb-4 text-white d-flex flex-column justify-content-center align-items-start rounded"
